--- a/tibra/CMakeLists.txt
+++ b/tibra/CMakeLists.txt
@@ -11,6 +11,10 @@ set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ version selection")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../external_libraries)
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+  set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+endif()
+
 # Import CGAL and its components
 if( USE_CGAL MATCHES ON )
   find_package( CGAL QUIET COMPONENTS  )
@@ -23,7 +27,11 @@ if( USE_CGAL MATCHES ON )
   add_definitions( -DUSE_CGAL )
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -funroll-loops -std=c++17 ")
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -funroll-loops")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -funroll-loops -std=c++17 ")
+endif()
 
 # OMP support
 find_package(OpenMP)
@@ -34,7 +42,7 @@ if (OPENMP_FOUND)
 else()
   message(STATUS "OMP was not found")
   return()
-  endif()
+endif()
 
 message("-- CXX FLAGS: ${CMAKE_CXX_FLAGS}")
 
@@ -87,6 +95,11 @@ pybind11_add_module(TIBRA_Application MODULE THIN_LTO ${TIBRA_PYTHON_INTERFACE})
 target_link_libraries( TIBRA_Application PRIVATE TIBRA_ApplicationCore )
 set_target_properties( TIBRA_Application PROPERTIES PREFIX "")
 
+if(DEFINED ENV{BOOST_ROOT})
+  set(BOOST_ROOT $ENV{BOOST_ROOT})
+endif(DEFINED ENV{BOOST_ROOT})
+
+option(Boost_USE_STATIC_LIBS "Use static versions of Boost libraries" OFF)
 #include testing directories
 enable_testing()
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
