--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   compiler: gcc
 
 jobs:
-  build:
+  ubuntu:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -50,4 +50,53 @@ jobs:
     - name: Test cpp
       shell: bash
       run: ./TestExecutables/test_tibra --log_level=test_suite
+
+  windows:
+    runs-on: windows-latest
+    env:
+      BUILD_TYPE: Release
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.8'
+
+    - name: Download boost
+      run: |
+        $url = "https://sourceforge.net/projects/boost/files/boost/1.81.0/boost_1_81_0.tar.gz/download"
+        (New-Object System.Net.WebClient).DownloadFile($url, "$env:RUNNER_TEMP\boost.tar.gz")
+        7z.exe x "$env:RUNNER_TEMP\boost.tar.gz" -o"$env:RUNNER_TEMP\boostArchive" -y | Out-Null
+        7z.exe x "$env:RUNNER_TEMP\boostArchive" -o"$env:RUNNER_TEMP\boost" -y | Out-Null
+    - name: Configure boost unit test framework
+      shell: cmd
+      run: |
+        cd "%RUNNER_TEMP%\boost\boost_1_81_0"
+        bootstrap.bat --with-toolset=msvc || goto :error
+    - name: Build boost unit test framework
+      shell: cmd
+      run: |
+        cd "%RUNNER_TEMP%\boost\boost_1_81_0"
+        b2 address-model=64 architecture=x86 toolset=msvc --with-test link=shared --prefix=boost_install install || goto:error
+    - name: Installing dependencies
+      shell: cmd
+      run: |
+        pip install numpy
+        pip install scipy
+    - name: Build
+      shell: cmd
+      run: |
+        copy .\.github\workflows\configure.cmd
+        configure.cmd
+    - name: Test py
+      shell: cmd
+      run: |
+        set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\RUNNER_TEMP\boost\boost_1_81_0\boost_install\lib
+        python tibra/tests/test_tibra.py
+    - name: Test cpp
+      shell: cmd
+      run: |
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;%RUNNER_TEMP%\boost\boost_1_81_0\boost_install\lib
+        call "TestExecutables\Release\test_tibra.exe" --log_level=test_suite || goto:error
 
