--- a/tibra/CMakeLists.txt
+++ b/tibra/CMakeLists.txt
@@ -63,17 +63,11 @@ file(GLOB TIBRA_ApplicationSource
   ${CMAKE_CURRENT_SOURCE_DIR}/../external_libraries/aabb_tree/*.cc
 )
 
-## CGAL python interface sources
+## TIBRA python interface sources
 file(GLOB_RECURSE TIBRA_PYTHON_INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)
 
-if( USE_CGAL MATCHES ON )
-  add_library(TIBRA_ApplicationCore SHARED ${TIBRA_ApplicationSource} ${TIBRA_CGALWrapperSource})
-  target_link_libraries(TIBRA_ApplicationCore PUBLIC CGAL ${PYTHON_LIBRARIES})
-else()
-  add_library(TIBRA_ApplicationCore SHARED ${TIBRA_ApplicationSource} )
-  target_link_libraries(TIBRA_ApplicationCore PUBLIC ${PYTHON_LIBRARIES})
-endif()
-
+add_library(TIBRA_ApplicationCore SHARED ${TIBRA_ApplicationSource} )
+target_link_libraries(TIBRA_ApplicationCore PUBLIC ${PYTHON_LIBRARIES})
 set_target_properties(TIBRA_ApplicationCore PROPERTIES COMPILE_DEFINITIONS "TIBRA_Application=EXPORT,API")
 
 pybind11_add_module(TIBRA_Application MODULE THIN_LTO ${TIBRA_PYTHON_INTERFACE})
@@ -119,7 +113,7 @@ add_test(NAME ${testThingiName}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../TestExecutables
                   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../TestExecutables/${testThingiName} )
 
-#Setting the libs folder for the shared objects built in kratos
+# Setting the libs folder for the shared objects built in kratos
 install(TARGETS TIBRA_Application DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../libs)
 install(TARGETS TIBRA_ApplicationCore DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../libs)
 
