--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -1,5 +1,5 @@
 # This is the CMake script for compiling QuESo Python Module.
-cmake_minimum_required(VERSION 3.1...3.15)
+cmake_minimum_required(VERSION 3.1)
 project(QuESo_Application)
 
 # Set build type to Release
