--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,11 @@ concurrency:
 jobs:
   ubuntu:
     runs-on: ubuntu-latest
+    fail-fast: false
+    matrix:
+      build-type: [Release, FullDebug]
     env:
-      QUESO_BUILD_TYPE: Release
+      QUESO_BUILD_TYPE: ${{ matrix.build-type }}
     steps:
     - uses: actions/checkout@v3
       with:
@@ -36,40 +39,6 @@ jobs:
       run: |
         cp .github/workflows/run_tests_thingi10k.sh run_tests_thingi10k.sh
         bash run_tests_thingi10k.sh
-
-    - name: Test py
-      shell: bash
-      run: |
-        pip3 install numpy
-        pip3 install scipy
-        export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
-        export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
-        python3 queso/tests/test_queso.py
-
-    - name: Test cpp
-      shell: bash
-      run: ./TestExecutables/test_queso --log_level=test_suite
-
-  ubuntu:
-    runs-on: ubuntu-latest
-    env:
-      QUESO_BUILD_TYPE: FullDebug
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: 'false'
-
-    - name: Install Dependencies
-      run: sudo apt-get install -y libboost-test-dev
-
-    - name: Build
-      shell: bash
-      # Build your program with the given configuration
-      run: |
-        export CC=/usr/bin/gcc
-        export CXX=/usr/bin/g++
-        cp .github/workflows/configure.sh configure.sh
-        bash configure.sh
 
     - name: Test py
       shell: bash
