--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -24,6 +24,8 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -funroll-loops -Wall -Wsuggest-override -std=c++17")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -funroll-loops -Wall")
+    string( REPLACE "/W3" "" CMAKE_C_FLAGS ${CMAKE_C_FLAGS} )
+    string( REPLACE "/W3" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} )
 endif()
 
 # OMP support
