--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,9 @@ jobs:
       QUESO_BUILD_TYPE: ${{ matrix.build-type }}
     steps:
     - uses: actions/checkout@v3
-      with:
-        submodules: 'false'
+    - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
     - name: Install Dependencies
       run: sudo apt-get install -y libboost-test-dev
@@ -61,6 +62,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
     - uses: actions/setup-python@v4
       with:
         python-version: '3.8'
