--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       shell: bash
       # Build your program with the given configuration
       run: |
-        export CC=/usr/bin/gcc
-        export CXX=/usr/bin/g++
+        export CC=/usr/bin/gcc-12
+        export CXX=/usr/bin/g++-12
         cp .github/workflows/configure.sh configure.sh
         bash configure.sh
 
