--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
       shell: bash
       # Build your program with the given configuration
       run: |
-        export CC=/usr/bin/gcc-12
-        export CXX=/usr/bin/g++-12
+        export CC=/usr/bin/gcc
+        export CXX=/usr/bin/g++
         cp .github/workflows/configure.sh configure.sh
         bash configure.sh
 
@@ -48,9 +48,7 @@ jobs:
         pip3 install numpy
         pip3 install scipy
         export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
-        echo $PYTHONPATH
         export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
-        echo $LD_LIBRARY_PATH
         python3 queso/tests/test_queso.py
 
     - name: Test cpp
