--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -8,6 +8,7 @@ if(NOT DEFINED ENV{QUESO_BUILD_TYPE})
 else()
     set(CMAKE_BUILD_TYPE $ENV{QUESO_BUILD_TYPE} CACHE STRING "Build type")
 endif()
+message("CMAKE_BUILD_TYPE:" ${CMAKE_BUILD_TYPE})
 
 set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ version selection")
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
