--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -10,7 +10,7 @@ else()
 endif()
 message("-- CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})
 
-set(CMAKE_CXX_STANDARD)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Include local directories
