--- a/queso/CMakeLists.txt
+++ b/queso/CMakeLists.txt
@@ -67,6 +67,7 @@ file(GLOB QuESo_PYTHON_INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/python/*.cpp)
 
 # Create Core Library
 add_library(QuESo_ApplicationCore SHARED ${QuESo_ApplicationSource})
+target_compile_definitions(QuESo_ApplicationCore PRIVATE QUESO_BUILD_TESTING=0)
 target_link_libraries(QuESo_ApplicationCore PUBLIC ${PYTHON_LIBRARIES})
 set_target_properties(QuESo_ApplicationCore PROPERTIES COMPILE_DEFINITIONS "QuESo_Application=EXPORT,API")
 
@@ -80,7 +81,14 @@ target_link_libraries(QuESo_Application PRIVATE QuESo_ApplicationCore)
 set_target_properties(QuESo_Application PROPERTIES PREFIX "")
 
 # === TESTING ===
-if(${QUESO_BUILD_TESTING} MATCHES ON)
+option(QUESO_BUILD_TESTING "Enable unit testing framework" OFF)
+if(QUESO_BUILD_TESTING)
+    message("-- QuESo C++ unit testing framework: enabled.")
+else()
+    message("-- QuESo C++ unit testing framework: disabled.")
+endif()
+
+if(QUESO_BUILD_TESTING)
     # Find Boost
     if(DEFINED ENV{BOOST_ROOT})
         set(BOOST_ROOT $ENV{BOOST_ROOT})
@@ -116,7 +124,7 @@ if(${QUESO_BUILD_TESTING} MATCHES ON)
     # Register tests
     add_test(NAME ${testName} COMMAND ${TEST_EXECUTABLE_DIR}/${testName})
     add_test(NAME ${testThingiName} COMMAND ${TEST_EXECUTABLE_DIR}/${testThingiName})
-endif(${QUESO_BUILD_TESTING} MATCHES ON)
+endif()
 
 # Setting the libs folder for the shared objects built in kratos
 install(TARGETS QuESo_Application DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../libs)
